--- a/scss/_variables-dark.scss
+++ b/scss/_variables-dark.scss
@@ -150,8 +150,7 @@ $breadcrumb-divider-filter-dark:      $invert-filter !default; // Boosted mod
 // Tables
 //
 
-$table-striped-bg-factor-dark:        .135 !default; // Boosted mod
-$table-striped-hover-bg-factor-dark:  .855 !default; // Boosted mod
+$table-striped-bg-factor-dark:        1 !default; // Boosted mod
 $table-hover-bg-factor-dark:          .135 !default; // Boosted mod
-$table-active-bg-factor-dark:         .565 !default; // Boosted mod
+$table-active-bg-factor-dark:         .35 !default; // Boosted mod
 // scss-docs-end sass-dark-mode-vars
